opa/constraint-template-identity.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8stenantidentity
spec:
  crd:
    spec:
      names:
        kind: K8sTenantIdentity
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8stenantidentity

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"

          username := input.review.userInfo.username
          parts := split(username, ":")
          count(parts) > 3

          user_namespace := parts[3]
          expected := user_namespace

          actual := input.review.object.metadata.labels["tenant"]
          actual != expected

          msg := sprintf("User from namespace '%v' is not allowed to set label 'tenant: %v'", [user_namespace, actual])
        }
